fixed chevron on mobile

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -27,8 +27,32 @@
 }
 
 .p-dropdown .p-dropdown-trigger {
-    @apply border-l border-white px-2;
+    @apply border-l border-white px-8;
 }
+
+.pi.pi-chevron-down {
+    background-image: url("data:image/svg+xml,%3Csvg data-v-526c5bd9='' aria-hidden='true' focusable='false' data-prefix='fas' data-icon='chevron-down' role='img' height='24px' width='24px' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512' class='svg-inline--fa fa-chevron-down fa-w-14 fa-lg'%3E%3Cpath data-v-526c5bd9='' fill='%23FFF' d='M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z' class=''%3E%3C/path%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-size: 24px;
+    background-position: center;
+    width: 24px;
+    height: 24px;
+}
+
+@media screen and (max-width: 640px) {
+    .pi.pi-chevron-down {
+        background-size: 20px;
+        width: 20px;
+        height: 20px;
+    }
+
+    .p-dropdown .p-dropdown-trigger {
+        @apply px-4;
+    }
+
+}
+
+
 
 .p-dropdown-items-wrapper {
     @apply bg-white text-black;
